--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exodus/react-fancy-qrcode",
-  "version": "1.0.4",
+  "version": "1.0.5-rc.2",
   "description": "Customizable QR code generated for React & React Native",
   "types": "dist/*.d.ts",
   "main": "dist/native.js",
