--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exodus/react-fancy-qrcode",
-  "version": "1.0.5-rc.2",
+  "version": "1.0.5-rc.3",
   "description": "Customizable QR code generated for React & React Native",
   "types": "dist/*.d.ts",
   "main": "dist/native.js",
@@ -35,10 +35,10 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "qrcode": "^1.5.0",
-    "react": ">17.0.1"
+    "qrcode": "^1.5.0"
   },
   "peerDependencies": {
     "react-native-svg": ">12.3.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
