--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exodus/react-fancy-qrcode",
-  "version": "1.0.5-rc.3",
+  "version": "1.0.5-rc.4",
   "description": "Customizable QR code generated for React & React Native",
   "types": "dist/*.d.ts",
   "main": "dist/native.js",
@@ -28,14 +28,13 @@
   },
   "homepage": "https://github.com/ExodusMovement/react-fancy-qrcode#readme",
   "devDependencies": {
-    "@types/qrcode": "^1.4.2",
     "@types/react": "^17.0.43",
     "react-native-svg": ">12.3.0",
     "tslib": "^2.7.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "qrcode": "^1.5.0"
+    "qr-image": "^3.1.0"
   },
   "peerDependencies": {
     "react-native-svg": ">12.3.0"
